--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="halt-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>I already learned the basic HTML and CSS. I tried to make simple website. My goal us to build a website
+            </p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
